--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -7,7 +7,7 @@ description: |
 ---
   **Organizers**
   
-  * [**Gunel Jahangirova**](https://search.usi.ch/en/people/008aa0284634da5ed6d51043d06933c9/jahangirova-gunel) <br> Università della Svizzera italiana (USI), Lugano, Switzerland
+  * [**Gunel Jahangirova**](https://sites.google.com/view/guneljahangirova) <br> Università della Svizzera italiana (USI), Lugano, Switzerland
   
   * [**Valerio Terragni**](https://valerio65.github.io/) <br> University of Auckland, Auckland, New Zealand
   
